# OpenRepairPlatform

./: .dockerignore  .env.prod  .gitignore  .gitlab-ci.yml  LICENSE  README.md  README.rst  README_GITHUB.md  bootstrap.py  bootstrap.sh  celery.sh  clean_data.sh  cron_job.sh  docker-compose-initiate.prod.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fixture.json  install.prod.sh  install.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rebuild-and-start.sh  requirements.txt  requirements_dev.txt  script_problem_fees_2021.py  setup.cfg  start.sh
.github/workflows/: ci.yml
api/: urls.py  views.py
ateliersoude/: .env  assets.py  celery.py  celeryconf.py  conftest.py  fields.py  filters.py  mixins.py  settings.py  tables.py  urls.py  utils.py  views.py  wsgi.py
ateliersoude/event/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
ateliersoude/integration_tests/: Dockerfile  integration_tests.py
ateliersoude/inventory/: admin.py  forms.py  models.py  urls.py  views.py
ateliersoude/location/: admin.py  api_views.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
ateliersoude/settings/: __init__.py  base.py  common.py  dev.py  dev_docker.py  preprod.py  prod.py  test.py  tests_docker.py
ateliersoude/templates/: 403.html  404.html  base.html  breadcrumb.html  extra_column_data.html  home.html  menu.html  organization_controls.html  organization_detail.html  organization_details.html  organization_events.html  organization_fees.html  organization_members.html  organization_menu.html  organization_page.html  organization_stock.html
ateliersoude/tests/: test_fields.py  test_mixins.py  test_utils.py
ateliersoude/user/: admin.py  api_views.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
deployment/: build.sh  checklist.txt  clean.sh  dev_data_reparons.json  docker-compose-no-certificat.yml  docker-compose.yml  run.sh
deployment/django/: Dockerfile  Dockerfile_prod  ateliersoude.cron  django.env  openrepairplatform.cron  start-dev.sh  start.sh  uwsgi.ini
deployment/docker-app/: Dockerfile  bootstrap.sh  entrypoint.sh  gunicorn.sh  requirements.txt
deployment/docker-db/: Dockerfile  docker-entrypoint.sh  postgresql.conf
deployment/nginx/: Dockerfile  certbot.sh  nginx-no-certificat.conf  nginx-snippet.conf  nginx.conf  nginx.env
deployment/postgres/: postgres.env
deployment/saves-bdd/: dev_data_reparons.json
development/: django.env
docs/: functional_description.md
openrepairplatform/: .env  assets.py  conftest.py  context_processors.py  fields.py  filters.py  mail.py  mixins.py  tables.py  urls.py  utils.py  views.py  wsgi.py
openrepairplatform/event/: admin.py  api_urls.py  api_views.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
openrepairplatform/integration_tests/: integration_tests.py
openrepairplatform/inventory/: admin.py  api_urls.py  api_views.py  apps.py  electronics_categories_FR.json  factories.py  filters.py  forms.py  mixins.py  models.py  serializers.py  tables.py  urls.py  views.py
openrepairplatform/location/: admin.py  api_urls.py  api_views.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
openrepairplatform/settings/: base.py  dev.py  dev_docker.py  preprod.py  prod.py  tests.py
openrepairplatform/static/: build.js  build.prod.js  package-lock.json  package.json  webpack-dev.config.js  webpack.config.js
openrepairplatform/templates/: 404.html  500.html  about.html  base.html  base_home.html  breadcrumb.html  extra_column_data.html  feed.html  footer.html  home.html  home_location.html  left-menu.html  mentions-legales.html  menu.html  organization_controls.html  organization_events.html  organization_fees.html  organization_groups.html  organization_members.html  organization_menu.html  organization_page.html  organization_stock.html  robots.txt  test_inventory_vue.html
openrepairplatform/tests/: test_mixins.py  test_views.py
openrepairplatform/user/: admin.py  api_urls.py  api_views.py  factories.py  forms.py  mixins.py  models.py  serializers.py  urls.py  views.py
plateformeweb/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  rules.py  tasks.py  urls.py  views.py
plateformeweb/fixtures/: 001_eventtypes.json  README.txt
plateformeweb/migrations/: .0007_auto_20180528_0943.py.swp  0001_initial.py  0002_auto_20171117_1645.py  0002_auto_20171211_1042.py  0002_auto_20180503_0859.py  0002_auto_20180711_0848.py  0002_auto_20181214_1654.py  0002_auto_20181216_1310.py  0003_auto_20171219_0813.py  0003_auto_20180511_1329.py  0003_auto_20181214_1712.py  0003_remove_user_registration_date.py  0004_auto_20171120_1343.py  0004_auto_20171219_1520.py  0004_auto_20180511_1500.py  0005_auto_20180523_1334.py  0006_auto_20180528_0921.py  0007_auto_20180528_1049.py  0008_auto_20180528_1112.py  0009_auto_20180528_1118.py  0010_auto_20180528_1123.py  0011_auto_20180528_1147.py  0012_merge_20180727_1453.py
plateformeweb/templatetags/: app_filters.py
plateformeweb/tests/: tests_models.py  tests_views.py
static/css/: ateliersoude.css  ateliersoude.css.map  leaflet.awesome-markers.css
static/js/: event_detail.js  event_list_onclick.js  helper_functions.js  make_modal.js  recurrence.js  recurrence_book.js  recurrence_create.js
templates/: base.html  detail_view.html  feed.html  form_view.html  list_view.html  menu.html  test.html
templates/mail/: cancel_failed.html  cancel_ok.html  footer.html  notification.html  relance.html
templates/plateformeweb/: activity.html  activity_detail.html  activity_form.html  activity_list.html  add_user.html  booking_form.html  event.html  event_detail.html  event_form.html  event_list.html  event_list_vuejs.html  event_vuejs.html  home.html  mass_event_book.html  mass_event_form.html  organization.html  organization_detail.html  organization_form.html  organization_list.html  (+5 more)
tools/: clean_data.sh  clean_database.sh
users/: README.md  __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+429 files in other folders)
