[project]
name = "openrepairplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs==1.4.4",
    "argcomplete==3.6.3",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "asttokens==3.0.1",
    "attrs==24.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "brotli==1.1.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "cssmin==0.2.0",
    "cssselect2==0.7.0",
    "decorator==5.2.1",
    "diff-match-patch==20241021",
    "django==5.2.13",
    "django-anymail==12.0",
    "django-assets",
    "django-autocomplete-light==3.9.7",
    "django-better-admin-arrayfield==1.4.2",
    "django-bootstrap-modal-forms==3.0.5",
    "django-bootstrap-static==5.3.3",
    "django-bootstrap5>=25.2",
    "django-debug-toolbar==4.4.6",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "django-gravatar2==1.4.5",
    "django-import-export==4.1.1",
    "django-recaptcha==4.0.0",
    "django-simple-history==3.7.0",
    "django-tables2==2.7.0",
    "django-tables2-column-shifter==2.2.0",
    "django-tinymce==4.1.0",
    "django-treebeard==4.7.1",
    "django4-initial-avatars==0.9.1",
    "djangorestframework==3.15.2",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "factory-boy==3.3.3",
    "faker==37.12.0",
    "fonttools==4.60.2",
    "html2text==2024.2.26",
    "html5lib==1.1",
    "ics==0.7.2",
    "idna==3.10",
    "importlib-resources==6.4.5",
    "inflection==0.5.1",
    "iniconfig==2.1.0",
    "ipdb==0.13.13",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jsmin==3.0.1",
    "lxml==5.3.0",
    "matplotlib-inline==0.1.7",
    "packaging==26.0",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "psycopg2-binary==2.9.10",
    "ptvsd==4.3.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pycups==2.0.4",
    "pydyf==0.11.0",
    "pygments==2.19.2",
    "pyphen==0.15.0",
    "pypng==0.20220715.0",
    "pyserial==3.5",
    "python-barcode==0.16.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-escpos==3.1",
    "pyusb==1.2.1",
    "pyyaml==6.0.3",
    "qrcode==7.4.2",
    "raven==6.10.0",
    "requests==2.32.3",
    "six==1.17.0",
    "sorl-thumbnail==12.11.0",
    "soupsieve==2.6",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "tablib==3.5.0",
    "tatsu==5.8.3",
    "tinycss2==1.4.0",
    "tomli==2.4.0",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.2",
    "tzdata==2025.3",
    "urllib3==2.2.3",
    "uwsgi==2.0.31",
    "wcwidth==0.5.0",
    "weasyprint==61.2",
    "webassets==2.0",
    "webencodings==0.5.1",
    "zipp==3.20.2",
    "zopfli==0.2.3.post1",
]

[tool.uv.sources]
django-assets = { git = "https://github.com/ahguerilla/django-assets.git", rev = "018758dcf2b5f864f2a3a462de462031c213b41e" }

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-livereload-server>=0.5.1",
    "pytest==8.3.2",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.8.1",
    "sentry-sdk[django]>=2.57.0",
]
