[metadata]
name = openrepairplatform
version = 0.0.1
author = Hashbang
url = https://gitlab.com/hashbangfr/openrepairplatform

[tool:pytest]
DJANGO_SETTINGS_MODULE = openrepairplatform.settings.tests
addopts = --reuse-db --cov-report xml --cov-report term-missing --cov=openrepairplatform --disable-pytest-warnings --flake8

[flake8]
exclude = ./*/migrations/*,venv

[black]
exclude = ./*/migrations/*,venv,node_modules

[coverage:run]
omit = */wsgi.py,
       manage.py,
       */conftest.py,
       */migrations/*,
       */tests/*,
       */api/views.py,
       */admin.py,
       */settings/*,
       */urls.py,
       */assets.py,
       */app/apps.py

[options]
packages = find:
install_requires =
    django
    lxml
    weasyprint
    django-simple-history
    djangorestframework
    psycopg2
    django-bootstrap-static
    django-assets
    cssmin
    jsmin
    django-bootstrap4
    raven
    sorl-thumbnail
    django-tinymce
    bleach
    django-gravatar2
    django-autocomplete-light==3.5.1
    django-recaptcha
    django-tables2
    django-tables2-column-shifter
    django-filter
    tablib
    python-dotenv
    django-extensions
    django-treebeard
    django-bootstrap-modal-forms==2.0.0
    django-better-admin-arrayfield
    django-import_export
    django-initial-avatars
    django-debug-toolbar

tests_require =
    factory-boy
    pytest-cov
    pytest-flake8
    pytest-django
    diff-cover
    pytest-factoryboy

[options.extras_require]
test =
    factory-boy
    pytest-cov
    pytest-flake8
    pytest-django
    pytest-factoryboy
    diff-cover

