[metadata]
name = openrepairplatform
version = 0.0.1
author = Hashbang
url = https://gitlab.com/hashbangfr/openrepairplatform

[tool:pytest]
DJANGO_SETTINGS_MODULE = openrepairplatform.settings.tests
addopts = --reuse-db --cov-report xml --cov-report term-missing --cov=openrepairplatform --disable-pytest-warnings --flake8

[flake8]
exclude = ./*/migrations/*,venv

[black]
exclude = ./*/migrations/*,venv,node_modules

[coverage:run]
omit = */wsgi.py,
       manage.py,
       */conftest.py,
       */migrations/*,
       */tests/*,
       */api/views.py,
       */admin.py,
       */settings/*,
       */urls.py,
       */assets.py,
       */app/apps.py

[options]
packages = find:
install_requires =
    django
    backports.zoneinfo;python_version<"3.9"
    lxml
    weasyprint
    django-simple-history
    djangorestframework
    psycopg2-binary
    django-bootstrap-static
    django-assets @ git+https://github.com/ahguerilla/django-assets.git
    cssmin
    jsmin
    django-bootstrap-v5
    raven
    sorl-thumbnail
    django-tinymce
    bleach
    django-gravatar2
    django-autocomplete-light==3.9.7
    django-recaptcha
    django-tables2
    django-tables2-column-shifter
    django-filter
    tablib
    python-dotenv
    django-extensions
    django-treebeard
    django-bootstrap-modal-forms==3.0.5
    django-better-admin-arrayfield
    django-import_export
    django4-initial-avatars
    django-debug-toolbar
    ics
    qrcode
    python-escpos[all]
    html2text
    requests
    django-anymail
		ipdb
		python-escpos

tests_require =
    pytest==8.3.2
    factory-boy
    pytest-cov
    pytest-flake8
    pytest-django
    diff-cover
    pytest-factoryboy

[options.extras_require]
test =
    pytest==8.3.2
    factory-boy
    pytest-cov
    pytest-flake8
    pytest-django
    pytest-factoryboy
    diff-cover

